partials vide mits en com sur main, mise en forme image home, z index bottom bar dans common

--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -15,8 +15,9 @@ header{
 .bottom-bar{
     background-color: $secondary-c-home;
     color: white;
-    position: absolute;
+    position: fixed;
     bottom: 0;
+    z-index: 1000;
 }
 
 
