--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,10 +1,21 @@
 //section home
+.home{
+    display: block;
+}
+
+.home .row{
+    align-items: center;
+}
+
 .home img{
     border-radius: 500px;
     box-shadow: black;
-    // height: 50px;
+    height: 100%;
+    width: 100%;
 }
-
+.home p:first-child{
+    width: 50%;
+}
 
 .home p, .home h2{
     color: white;
