...j'avais oublié que j'avais mit ce projet sur git...

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,3 +1,10 @@
+$main-color : #5F6769; $second-color : #3C4245;  $next-color : #719192; 
+
+//section nav
+header.home-second-color{
+    color: white;
+}
+
 //section home
 .home{
     display: block;
@@ -23,5 +30,24 @@
 
 .home .col-6{
     align-items: center;
+}
+
+//section color
+.home-main-color{
+    background-color: $main-color;
+}
+
+.home-second-color{
+    background-color: $second-color;
+    color: white;
+}
+
+.home-text-color{
+    background-color: $main-color;
+}
+
+.home-active{
+    color: $next-color;
+    font-weight: bold;
 }
 
