--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
 @import "common";
 @import "home";
-// @import "skills";
-// @import "portfolio";
-// @import "contact";
+@import "skills";
+@import "portfolio";
+@import "contact";
