mise en place de base en terme de style? (base du portfolio en place, contact basique en place, progess bar bootstrap page skills

--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -3,6 +3,9 @@ $main-color : #3C4245; $second-color : #DFCDC3; $next-color : #719192;
 //section nav
 header.contact-second-color{
     color: $main-color;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
 }
 
 
