--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -3,6 +3,9 @@ $main-color : #5F6769; $second-color : #3C4245;  $next-color : #719192;
 //section nav
 header.home-second-color{
     color: white;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
 }
 
 //section home
