--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -3,6 +3,9 @@ $main-color : #719192; $second-color : #5F6769; $next-color : #DFCDC3;
 //section nav
 header.skills-second-color{
     color: white;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
 }
 
 //section home
