--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -19,8 +19,6 @@ header.portfolio-second-color{
 }
 
 .portfolio img{
-    border-radius: 500px;
-    box-shadow: black;
     height: 100%;
     width: 100%;
 }
@@ -75,9 +73,14 @@ header.portfolio-second-color{
     height : 25vh;
 }
 
+.portfolio-dimensions:hover{
+    cursor: pointer;
+}
+
 // .portfolio-dimensions::before{
 //     content: url("../media/hover-eye.png");
 //     display: none;
+//     position: absolute;
 //     width: 100%;
 //     height : 25vh;
 //     background-color: rgba(0, 0, 0, 0.575);
