changed form-control class bg color

--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -54,3 +54,8 @@ header.contact-second-color{
     color: $next-color;
     font-weight: bold;
 }
+
+.form-control {
+    color: #ffffff;
+    background-color: #3c4245;
+}
